--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -18,11 +18,6 @@ buildscript {
     }
 }
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-}
-
 apply plugin: 'android'
 apply plugin: 'android-apt'
 apply plugin: 'android-test'
@@ -64,11 +59,16 @@ android {
     }
 }
 
-def androidSupportVersion = '19.0.+'
+def androidSupportVersion = '19.1.0'
 def greenDaoVersion = '1.3.7'
 def androidAnnotationsVersion = '2.7.1'
 def daggerVersion = '1.2.1'
 def commonsLang3Version = '3.3'
+def guavaVerions = '16.0.1'
+def JUnitVersion = '4.11'
+def robolectricVersion = '2.3-SNAPSHOT'
+def festAndroidVersion = '1.0.7'
+def espressoVersion = '1.1-r2'
 
 androidTest {
     include '**/*Test.class'
@@ -76,13 +76,13 @@ androidTest {
     maxHeapSize = "2048m"
 }
 
-dependencies {
-    repositories {
-        mavenCentral()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
+repositories {
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots/'
     }
+}
+
+dependencies {
     // Android Support
     compile "com.android.support:support-v4:${androidSupportVersion}"
     compile "com.android.support:appcompat-v7:${androidSupportVersion}"
@@ -101,11 +101,14 @@ dependencies {
     // Commons-lang3
     compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
 
+    // Guava
+    compile "com.google.guava:guava:${guavaVerions}"
+
     // JUnit
-    androidTestCompile 'junit:junit:4.11'
+    androidTestCompile "junit:junit:${JUnitVersion}"
 
     // Robolectric
-    androidTestCompile('org.robolectric:robolectric:2.3-SNAPSHOT') {
+    androidTestCompile("org.robolectric:robolectric:${robolectricVersion}") {
         exclude module: 'classworlds'
         exclude module: 'maven-artifact'
         exclude module: 'maven-artifact-manager'
@@ -126,13 +129,13 @@ dependencies {
     }
 
     // Fest-android
-    androidTestCompile 'com.squareup:fest-android:1.0.7'
+    androidTestCompile "com.squareup:fest-android:${festAndroidVersion}"
 
 //    // Espresso
-    androidTestCompile ('com.jakewharton.espresso:espresso:1.1-r2') {
-        exclude group: 'com.squareup.dagger', module: 'dagger'
-    }
-    androidTestCompile ('com.jakewharton.espresso:espresso-support-v4:1.1-r2') {
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
+//    androidTestCompile ("com.jakewharton.espresso:espresso:${espressoVersion}") {
+//        exclude group: 'com.squareup.dagger', module: 'dagger'
+//    }
+//    androidTestCompile ("com.jakewharton.espresso:espresso-support-v4:${espressoVersion}") {
+//        exclude group: 'com.android.support', module: 'support-v4'
+//    }
 }
