--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light" >
         <activity
-                android:name=".activity.MainActivity_"
+                android:name=".MainActivity_"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
