--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -59,16 +59,15 @@ android {
     }
 }
 
-def androidSupportVersion = '19.1.0'
-def greenDaoVersion = '1.3.7'
+def androidSupportVersion = '19.1.+'
+def greenDaoVersion = '1.3.+'
 def androidAnnotationsVersion = '2.7.1'
-def daggerVersion = '1.2.1'
-def commonsLang3Version = '3.3'
-def guavaVerions = '16.0.1'
+def daggerVersion = '1.2.+'
+def commonsLang3Version = '3.3.+'
+def guavaVerions = '17.0'
 def JUnitVersion = '4.11'
 def robolectricVersion = '2.3-SNAPSHOT'
-def festAndroidVersion = '1.0.7'
-def espressoVersion = '1.1-r2'
+def festAndroidVersion = '1.0.+'
 
 androidTest {
     include '**/*Test.class'
