--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    def androidGradlePluginVersion= '0.9.2'
+    def androidGradlePluginVersion= '0.10.+'
     def androidAptVersion = '1.2'
-    def robolectricTestPluginVersion = '0.9.3'
+    def robolectricTestPluginVersion = '0.10.+'
 
     repositories {
         mavenCentral()
@@ -13,8 +13,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${androidGradlePluginVersion}"
         classpath "com.neenbedankt.gradle.plugins:android-apt:${androidAptVersion}"
-        classpath (files("libs/gradle-android-test-plugin-0.9.4-SNAPSHOT.jar"))
-//        classpath "org.robolectric.gradle:gradle-android-test-plugin:${robolectricTestPluginVersion}"
+        classpath "org.robolectric.gradle:gradle-android-test-plugin:${robolectricTestPluginVersion}"
     }
 }
 
