--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -59,7 +59,7 @@ android {
 
 def androidSupportVersion = '19.1.+'
 def greenDaoVersion = '1.3.+'
-def androidAnnotationsVersion = '2.7.1'
+def androidAnnotationsVersion = '3.0.1'
 def daggerVersion = '1.2.+'
 def commonsLang3Version = '3.3.+'
 def guavaVerions = '17.0'
@@ -88,8 +88,8 @@ dependencies {
     compile "de.greenrobot:greendao:${greenDaoVersion}"
 
     // Android Annotations
-    apt "com.googlecode.androidannotations:androidannotations:${androidAnnotationsVersion}"
-    compile "com.googlecode.androidannotations:androidannotations-api:${androidAnnotationsVersion}"
+    apt "org.androidannotations:androidannotations:${androidAnnotationsVersion}"
+    compile "org.androidannotations:androidannotations-api:${androidAnnotationsVersion}"
 
     // Dagger
     apt "com.squareup.dagger:dagger-compiler:${daggerVersion}"
