--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    def androidGradlePluginVersion= '0.10.+'
+    def androidGradlePluginVersion= '0.11.+'
     def androidAptVersion = '1.2'
-    def robolectricTestPluginVersion = '0.10.+'
+//    def robolectricTestPluginVersion = '0.10.+'
 
     repositories {
         mavenCentral()
@@ -13,13 +13,14 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${androidGradlePluginVersion}"
         classpath "com.neenbedankt.gradle.plugins:android-apt:${androidAptVersion}"
-        classpath "org.robolectric.gradle:gradle-android-test-plugin:${robolectricTestPluginVersion}"
+//        classpath "org.robolectric.gradle:gradle-android-test-plugin:${robolectricTestPluginVersion}"
+        classpath files("libs/robolectric-gradle-plugin-0.11.0-0.11.0.jar")
     }
 }
 
 apply plugin: 'android'
 apply plugin: 'android-apt'
-apply plugin: 'android-test'
+apply plugin: 'robolectric'
 
 apt {
     arguments {
@@ -57,6 +58,12 @@ android {
     }
 }
 
+robolectric {
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+    maxHeapSize = "2048m"
+}
+
 def androidSupportVersion = '19.1.+'
 def greenDaoVersion = '1.3.+'
 def androidAnnotationsVersion = '3.0.1'
@@ -66,12 +73,6 @@ def guavaVerions = '17.0'
 def JUnitVersion = '4.11'
 def robolectricVersion = '2.4-SNAPSHOT'
 def festAndroidVersion = '1.0.+'
-
-androidTest {
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-    maxHeapSize = "2048m"
-}
 
 repositories {
     maven {
