--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     def androidGradlePluginVersion= '0.11.+'
     def androidAptVersion = '1.3'
-//    def robolectricTestPluginVersion = '0.10.+'
+    def robolectricGradlePluginVersion = '0.11.+'
 
     repositories {
         mavenCentral()
@@ -13,8 +13,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${androidGradlePluginVersion}"
         classpath "com.neenbedankt.gradle.plugins:android-apt:${androidAptVersion}"
-//        classpath "org.robolectric.gradle:gradle-android-test-plugin:${robolectricTestPluginVersion}"
-        classpath files("libs/robolectric-gradle-plugin-0.11.0-0.11.0.jar")
+        classpath "org.robolectric:robolectric-gradle-plugin:${robolectricGradlePluginVersion}"
     }
 }
 
@@ -33,24 +32,12 @@ android {
     compileSdkVersion 19
     buildToolsVersion '19.1.0'
 
-//    buildTypes {
-//        release {
-//            runProguard false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-//        }
-//    }
-
     lintOptions {
         abortOnError false
     }
 
     packagingOptions {
         exclude 'LICENSE.txt'
-    }
-
-    defaultConfig {
-//        for espresso:
-//        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
     sourceSets {
@@ -65,12 +52,13 @@ robolectric {
 }
 
 def androidSupportVersion = '19.1.+'
-def greenDaoVersion = '1.3.+'
+def ormLiteVersion = '4.48'
 def androidAnnotationsVersion = '3.0.1'
 def daggerVersion = '1.2.+'
 def commonsLang3Version = '3.3.+'
 def guavaVerions = '17.0'
 def JUnitVersion = '4.11'
+def mockitoVersion = '1.9.5'
 def robolectricVersion = '2.4-SNAPSHOT'
 def festAndroidVersion = '1.0.+'
 
@@ -78,6 +66,7 @@ repositories {
     maven {
         url 'https://oss.sonatype.org/content/repositories/snapshots/'
     }
+    mavenCentral()
 }
 
 dependencies {
@@ -85,8 +74,9 @@ dependencies {
     compile "com.android.support:support-v4:${androidSupportVersion}"
     compile "com.android.support:appcompat-v7:${androidSupportVersion}"
 
-    // GreenDao
-    compile "de.greenrobot:greendao:${greenDaoVersion}"
+    // OrmLite
+    compile "com.j256.ormlite:ormlite-android:${ormLiteVersion}"
+    compile "com.j256.ormlite:ormlite-core:${ormLiteVersion}"
 
     // Android Annotations
     apt "org.androidannotations:androidannotations:${androidAnnotationsVersion}"
@@ -104,6 +94,9 @@ dependencies {
 
     // JUnit
     androidTestCompile "junit:junit:${JUnitVersion}"
+
+    // Mockito
+    androidTestCompile "org.mockito:mockito-core:${mockitoVersion}"
 
     // Robolectric
     androidTestCompile("org.robolectric:robolectric:${robolectricVersion}") {
@@ -128,12 +121,4 @@ dependencies {
 
     // Fest-android
     androidTestCompile "com.squareup:fest-android:${festAndroidVersion}"
-
-//    // Espresso
-//    androidTestCompile ("com.jakewharton.espresso:espresso:${espressoVersion}") {
-//        exclude group: 'com.squareup.dagger', module: 'dagger'
-//    }
-//    androidTestCompile ("com.jakewharton.espresso:espresso-support-v4:${espressoVersion}") {
-//        exclude group: 'com.android.support', module: 'support-v4'
-//    }
 }
