--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
             android:name=".WalletPlus_"
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher_walletplus"
-            android:label="@string/app_name"
+            android:label="@string/appName"
             android:theme="@style/Theme.AppCompat.Light" >
         <activity
                 android:name=".MainActivity_"
-                android:label="@string/app_name">
+                android:label="@string/appName">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
