--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.korzeniowski.walletplus" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="info.korzeniowski.walletplus">
 
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
     <application
-            android:name=".WalletPlus_"
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher_walletplus"
-            android:label="@string/appName"
-            android:theme="@style/WalletPlusStyle" >
+        android:name=".WalletPlus_"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher_walletplus"
+        android:label="@string/appName"
+        android:theme="@style/WalletPlusStyle">
+
         <activity
-                android:name=".MainActivity_"
-                android:label="@string/appName">
+            android:name=".MainActivity_"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/appName">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
-
 
 
 </manifest>
