--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -123,40 +123,43 @@ def coverageSourceDirs = [
         'src/gen'
 ]
 
-// This differs per what flavors buildTypes etc.
-// But this example shows the 'testDebug'
-// which is standard for Robolectric
 task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
     group = "Reporting"
     description = "Generate Jacoco coverage reports after running tests."
     reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
+        xml.enabled = false
         html.enabled = true
     }
-    // class R is used, but usage will not be covered, so ignore this class from report
-    // This differs per plugin version (0.10 -> 0.11)
-    // have very different fileTrees.
-    // I have added rules to Ignore Dagger/Butterknife
     classDirectories = fileTree(
             dir: './build/intermediates/classes/debug',
-            excludes: ['info/korzeniowski/walletplus/R*.class',
+            excludes: ['**/R.class',
+                       '**/R$*.class',
                        '**/*$InjectAdapter.class',
                        '**/*$ModuleAdapter.class',
                        '**/*$ViewInjector*.class'
             ])
     sourceDirectories = files(coverageSourceDirs)
     executionData = files('build/jacoco/testDebug.exec')
-    // Bit hacky but fixes https://code.google.com/p/android/issues/detail?id=69174.
-    // We iterate through the compiled .class tree and rename $$ to $.
+
+    renamedFilesMap = [:]
+
+    // Hacky fix for issue: https://code.google.com/p/android/issues/detail?id=69174.
+    // Rename files with '$$' before generating report, and then rename back after
     doFirst {
         new File('WalletPlus/build/intermediates/classes/').eachFileRecurse { file ->
             if (file.name.contains('$$')) {
-                file.renameTo(file.path.replace('$$', '$'))
+                oldPath = file.path
+                newPath = oldPath.replace('$$', '$')
+                file.renameTo(newPath)
+                renamedFilesMap[newPath] = oldPath
             }
         }
     }
-    afterEvaluate {
-        // just clean up coveralls dashboard, following reports are not of interest
-        testDebug.reports.junitXml.enabled = false
+    doLast {
+        renamedFilesMap.each() {
+            newPath, oldPath ->
+                new File(newPath).renameTo(oldPath)
+        }
     }
+
 }
