--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     // Guava
     compile "com.google.guava:guava:17.0"
 
+    // PagerSlidingTabStrip
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
     // JUnit
     androidTestCompile "junit:junit:4.11"
 
