--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -28,6 +28,7 @@ android {
 
     lintOptions {
         abortOnError false
+        disable 'InvalidPackage'
     }
 
     packagingOptions {
@@ -35,6 +36,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
     sourceSets {
@@ -64,10 +66,8 @@ dependencies {
     compile "com.j256.ormlite:ormlite-android:$ormLiteVersion"
     compile "com.j256.ormlite:ormlite-core:$ormLiteVersion"
 
-    // Android Annotations
-    def androidAnnotationsVersion = '3.0.1'
-    apt "org.androidannotations:androidannotations:$androidAnnotationsVersion"
-    compile "org.androidannotations:androidannotations-api:$androidAnnotationsVersion"
+    // Butter Knife
+    compile 'com.jakewharton:butterknife:5.1.2'
 
     // Dagger
     def daggerVersion = '1.2.+'
