--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name=".WalletPlus_"
+        android:name=".WalletPlus"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_walletplus"
         android:label="@string/appName"
         android:theme="@style/WalletPlusStyle">
 
         <activity
-            android:name=".MainActivity_"
+            android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/appName">
 
