Make working Robolectric test + Move Fest Android to AssertJ Android + Adopt Wallet Fragments to Butterknife

--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -107,8 +107,8 @@ dependencies {
         exclude module: 'wagon-provider-api'
     }
 
-    // Fest-android
-    androidTestCompile "com.squareup:fest-android:1.0.+"
+    //AssertJ Android
+    androidTestCompile 'com.squareup.assertj:assertj-android:1.0.0-SNAPSHOT'
 }
 
 apply plugin: "jacoco"
