--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:0.12.+"
-        classpath "com.neenbedankt.gradle.plugins:android-apt:1.3"
+        classpath "com.neenbedankt.gradle.plugins:android-apt:1.4"
         classpath "org.robolectric:robolectric-gradle-plugin:0.11.+"
     }
 }
@@ -72,6 +72,7 @@ dependencies {
     // Dagger
     def daggerVersion = '1.2.+'
     apt "com.squareup.dagger:dagger-compiler:$daggerVersion"
+    androidTestCompile "com.squareup.dagger:dagger-compiler:$daggerVersion"
     compile "com.squareup.dagger:dagger:$daggerVersion"
 
     // Otto
