Fix communication between cashflow details fragments

--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/appName">
+            android:label="@string/appName"
+            android:windowSoftInputMode="stateHidden">
 
             <intent-filter>
 
