--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     def androidSupportVersion = '21.0.+'
     compile "com.android.support:support-v4:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
+    compile "com.android.support:cardview-v7:$androidSupportVersion"
+    compile "com.android.support:recyclerview-v7:$androidSupportVersion"
+
 
     // OrmLite
     def ormLiteVersion = '4.48'
