--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -142,6 +142,9 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
     }
     classDirectories = fileTree(
             dir: './build/intermediates/classes/debug',
+            includes: [
+                    '**/info/korzeniowski/walletplus/ui/**',
+                    '**/info/korzeniowski/walletplus/service/**'],
             excludes: ['**/R.class',
                        '**/R$*.class',
                        '**/*$InjectAdapter.class',
@@ -152,7 +155,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
     executionData = files('build/jacoco/testDebug.exec')
 
     def renamedFilesMap = [:]
-
+ 
     // Hacky fix for issue: https://code.google.com/p/android/issues/detail?id=69174.
     // Rename files with '$$' before generating report, and then rename back after
     doFirst {
