--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:0.13.+"
+        classpath "com.android.tools.build:gradle:0.14.1"
         classpath "com.neenbedankt.gradle.plugins:android-apt:1.4"
-        classpath "org.robolectric:robolectric-gradle-plugin:0.13.+"
+        classpath "org.robolectric:robolectric-gradle-plugin:0.13.2"
     }
 }
 
@@ -24,7 +24,7 @@ apt {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.0.2'
+    buildToolsVersion '21.1.1'
 
     lintOptions {
         abortOnError false
