--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -1,30 +1,40 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {url 'https://oss.sonatype.org/content/repositories/snapshots/'}
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:0.14.1"
+        classpath 'com.android.tools.build:gradle:1.0.0'
         classpath "com.neenbedankt.gradle.plugins:android-apt:1.4"
         classpath "org.robolectric:robolectric-gradle-plugin:0.13.2"
     }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'robolectric'
 
 apt {
     arguments {
-        androidManifestFile variant.processResources.manifestFile
-        resourcePackageName 'info.korzeniowski.walletplus'
+        androidManifestFile variant.outputs[0].processResources.manifestFile
+        resourcePackageName android.defaultConfig.applicationId
     }
 }
 
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.1'
+
+    defaultConfig {
+        versionCode 12
+
+        versionName "2.0"
+        applicationId 'info.korzeniowski.walletplus'
+
+        minSdkVersion 14
+        targetSdkVersion 21
+    }
 
     lintOptions {
         abortOnError false
@@ -40,7 +50,26 @@ android {
     }
 
     sourceSets {
-        androidTest.setRoot( 'src/androidTest' )
+        androidTest.setRoot('src/androidTest')
+    }
+
+    signingConfigs {
+        config {
+            keyAlias signingKeyAlias
+            storePassword signingStorePassword
+            keyPassword signingKeyPassword
+            storeFile file(signingStoreFile)
+        }
+    }
+
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.config
+            applicationIdSuffix ".debug"
+        }
+        release {
+            signingConfig signingConfigs.config
+        }
     }
 }
 
@@ -52,7 +81,7 @@ robolectric {
 
 repositories {
     mavenCentral()
-    maven {url 'https://oss.sonatype.org/content/repositories/snapshots/'}
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 
     // For SwipeListView
     maven { url 'http://clinker.47deg.com/nexus/content/groups/public' }
@@ -65,6 +94,9 @@ dependencies {
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
+
+    //Google Drive API
+    compile 'com.google.android.gms:play-services:6.5.+'
 
     // OrmLite
     def ormLiteVersion = '4.48'
@@ -81,10 +113,10 @@ dependencies {
     compile "com.squareup.dagger:dagger:$daggerVersion"
 
     // Otto
-    compile "com.squareup:otto:1.3.5"
+    compile 'com.squareup:otto:1.3.5'
 
     // Guava
-    compile "com.google.guava:guava:18.0"
+    compile 'com.google.guava:guava:18.0'
 
     // Joda time android
     compile 'net.danlew:android.joda:2.5.0'
@@ -96,18 +128,18 @@ dependencies {
     compile 'info.hoang8f:fbutton:1.0.5'
 
     // SwipeListView
-    compile ('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
+    compile('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
         transitive = true
     }
 
     // JUnit
-    androidTestCompile "junit:junit:4.11"
+    androidTestCompile 'junit:junit:4.11'
 
     // Mockito
-    androidTestCompile "org.mockito:mockito-core:1.9.5"
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
 
     // Robolectric
-    androidTestCompile("org.robolectric:robolectric:2.4") {
+    androidTestCompile('org.robolectric:robolectric:2.4') {
         exclude module: 'classworlds'
         exclude module: 'maven-artifact'
         exclude module: 'maven-artifact-manager'
