--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.korzeniowski.walletplus">
-
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="21" />
+<manifest
+        package="info.korzeniowski.walletplus"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name=".WalletPlus"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher_walletplus"
-        android:label="@string/appName"
-        android:theme="@style/WalletPlusStyle">
+            android:name=".WalletPlus"
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher_walletplus"
+            android:label="@string/appName"
+            android:theme="@style/WalletPlusStyle">
+
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version"/>
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/appName"
-            android:windowSoftInputMode="stateHidden">
+                android:name=".MainActivity"
+                android:label="@string/appName"
+                android:windowSoftInputMode="stateHidden">
 
             <intent-filter>
 
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
