--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher_walletplus"
             android:label="@string/appName"
+            android:supportsRtl="false"
             android:theme="@style/WalletPlusStyle">
 
         <meta-data
