--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/ic_launcher_walletplus"
             android:label="@string/appName"
             android:supportsRtl="false"
-            android:theme="@style/WalletPlusStyle">
+            android:theme="@style/WalletPlusTheme">
 
         <meta-data
                 android:name="com.google.android.gms.version"
