--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -45,6 +45,24 @@
         </activity>
 
         <activity
+                android:name=".ui.cashflow.list.CashFlowListActivity"
+                android:label="@string/walletListLabel"
+                android:parentActivityName=".ui.dashboard.DashboardActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".ui.dashboard.DashboardActivity"/>
+        </activity>
+
+        <activity
+                android:name=".ui.cashflow.details.CashFlowDetailsActivity"
+                android:label="@string/title_activity_wallet_details"
+                android:parentActivityName=".ui.cashflow.list.CashFlowListActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".ui.cashflow.list.CashFlowListActivity"/>
+        </activity>
+
+        <activity
                 android:name=".ui.category.list.CategoryListActivity"
                 android:label="@string/categoryListLabel"
                 android:parentActivityName=".ui.dashboard.DashboardActivity">
