--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -45,6 +45,24 @@
         </activity>
 
         <activity
+                android:name=".ui.otherwallets.list.OtherWalletListActivity"
+                android:label="@string/walletListLabel"
+                android:parentActivityName=".ui.dashboard.DashboardActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".ui.dashboard.DashboardActivity"/>
+        </activity>
+
+        <activity
+                android:name=".ui.otherwallets.details.OtherWalletDetailsActivity"
+                android:label="@string/title_activity_wallet_details"
+                android:parentActivityName=".ui.otherwallets.list.OtherWalletListActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".ui.otherwallets.list.OtherWalletListActivity"/>
+        </activity>
+
+        <activity
                 android:name=".ui.cashflow.list.CashFlowListActivity"
                 android:label="@string/walletListLabel"
                 android:parentActivityName=".ui.dashboard.DashboardActivity">
