--- a/WalletPlus/src/main/AndroidManifest.xml
+++ b/WalletPlus/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:installLocation="auto">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
             android:name=".WalletPlus"
             android:allowBackup="true"
