--- a/hellocharts-library/build.gradle
+++ b/hellocharts-library/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
 
 buildscript {
     repositories {
@@ -12,13 +13,13 @@ buildscript {
 
 dependencies {
     //compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:support-v4:21.0.+'
+    compile 'com.android.support:support-v4:21.0.3'
 }
 
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -26,10 +27,10 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 21
-        versionCode 3
-        versionName '1.3'
+        minSdkVersion Integer.parseInt(project.ANDROID_BUILD_MIN_SDK_VERSION)
+        targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
+        versionCode Integer.parseInt(project.VERSION_CODE)
+        versionName project.VERSION_NAME
     }
 
     sourceSets {
@@ -57,11 +58,6 @@ android {
 
 }
 
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
-}
-
 //Execute "gradle clean jarRelease" to cook jar.
 android.libraryVariants.all { variant ->
     def name = variant.buildType.name
@@ -81,13 +77,14 @@ publishing {
     publications {
         maven(MavenPublication) {
             artifact "${project.buildDir}/outputs/aar/${project.name}-release.aar"
-            artifactId project.name
-            groupId "lecho.lib.hellocharts"
-            version android.defaultConfig.versionName
+            artifactId = POM_ARTIFACT_ID
+            groupId = GROUP
+            version = VERSION_NAME
 
-            artifact androidSourcesJar {
-                classifier "sources"
-            }
+            // Task androidSourcesJar is provided by gradle-mvn-push.gradle
+            //artifact androidSourcesJar {
+            //    classifier "sources"
+            //}
         }
     }
 
