First Espresso test

--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -16,6 +16,15 @@ android {
     compileSdkVersion 21
     buildToolsVersion '21.1.2'
 
+    signingConfigs {
+        config {
+            keyAlias signingKeyAlias
+            storePassword signingStorePassword
+            keyPassword signingKeyPassword
+            storeFile file(signingStoreFile)
+        }
+    }
+
     defaultConfig {
         versionCode 1
         versionName "1.0.0-SNAPSHOT"
@@ -23,6 +32,9 @@ android {
 
         minSdkVersion 17
         targetSdkVersion 21
+
+        signingConfig signingConfigs.config
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     lintOptions {
@@ -35,24 +47,6 @@ android {
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/services/javax.annotation.processing.Processor'
-    }
-
-    signingConfigs {
-        config {
-            keyAlias signingKeyAlias
-            storePassword signingStorePassword
-            keyPassword signingKeyPassword
-            storeFile file(signingStoreFile)
-        }
-    }
-
-    buildTypes {
-        debug {
-            signingConfig signingConfigs.config
-        }
-        release {
-            signingConfig signingConfigs.config
-        }
     }
 }
 
@@ -148,11 +142,19 @@ dependencies {
     // ColorPickerView
     compile project(':colorPickerView-library')
 
+    // Espresso
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.0')
+    androidTestCompile('com.android.support.test:testing-support-lib:0.1')
+
+    // AssertJ Android
+//    androidTestCompile 'com.squareup.assertj:assertj-android:1.0.0'
+
     // JUnit
     testCompile 'junit:junit:4.12'
 
     // Mockito
     testCompile 'org.mockito:mockito-core:1.9.5'
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
 
     // Robolectric
     def robolectricVersion = '3.0-SNAPSHOT'
