--- a/WalletPlus/build.gradle
+++ b/WalletPlus/build.gradle
@@ -1,3 +1,7 @@
+import org.aspectj.bridge.IMessage
+import org.aspectj.bridge.MessageHandler
+import org.aspectj.tools.ajc.Main
+
 buildscript {
     repositories {
         mavenCentral()
@@ -7,6 +11,7 @@ buildscript {
     dependencies {
         classpath "com.neenbedankt.gradle.plugins:android-apt:1.4"
         classpath 'org.robolectric:robolectric-gradle-plugin:1.0.1'
+        classpath 'org.aspectj:aspectjtools:1.8.1'
     }
 }
 
@@ -92,6 +97,9 @@ dependencies {
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
+
+    // AspectJ
+    compile 'org.aspectj:aspectjrt:1.8.1'
 
     // Google Drive API
     compile 'com.google.android.gms:play-services-identity:6.5.87'
@@ -206,5 +214,45 @@ apply plugin: 'idea'
 idea {
     module {
         downloadSources = true
+    }
+}
+
+final def log = project.logger
+final def variants = project.android.applicationVariants
+variants.all { variant ->
+    if (!variant.buildType.isDebuggable()) {
+        log.debug("Skipping non-debuggable build type '${variant.buildType.name}'.")
+        return;
+    }
+    JavaCompile javaCompile = variant.javaCompile
+    javaCompile.doLast {
+        String[] args = ["-showWeaveInfo",
+                         "-1.5",
+                         "-inpath", javaCompile.destinationDir.toString(),
+                         "-aspectpath", javaCompile.classpath.asPath,
+                         "-d", javaCompile.destinationDir.toString(),
+                         "-classpath", javaCompile.classpath.asPath,
+                         "-bootclasspath", project.android.bootClasspath.join(File.pathSeparator)]
+        log.debug "ajc args: " + Arrays.toString(args)
+        MessageHandler handler = new MessageHandler(true);
+        new Main().run(args, handler);
+        for (IMessage message : handler.getMessages(null, true)) {
+            switch (message.getKind()) {
+                case IMessage.ABORT:
+                case IMessage.ERROR:
+                case IMessage.FAIL:
+                    log.error message.message, message.thrown
+                    break;
+                case IMessage.WARNING:
+                    log.warn message.message, message.thrown
+                    break;
+                case IMessage.INFO:
+                    log.info message.message, message.thrown
+                    break;
+                case IMessage.DEBUG:
+                    log.debug message.message, message.thrown
+                    break;
+            }
+        }
     }
 }
